<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:name="com.vladkrutlekto.notepad.NoteListFragment"
    android:background="@drawable/background"
    tools:context=".NoteListActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/note_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem="@layout/note_list_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.7"
            android:background="@color/colorPrimaryLight"
            android:contentDescription="@string/add_button_content_description"
            android:scaleType="fitCenter"
            android:src="@drawable/add" />

        <ImageButton
            android:id="@+id/delete_all_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.7"
            android:background="@color/colorPrimaryLight"
            android:contentDescription="@string/delete_all_button_content_description"
            android:scaleType="fitCenter"
            android:src="@drawable/deleteall" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:alpha="0.7"
        android:background="@color/colorPrimaryLight"
        android:contentDescription="@string/delete_button_content_description"
        android:scaleType="fitCenter"
        android:src="@drawable/delete" />
</LinearLayout>
