<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:fitsSystemWindows="true"
    tools:context=".NoteListActivity">

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:id="@+id/app_bar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:alpha="0.7"-->
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include
            layout="@layout/note_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.7"
                android:background="@color/colorPrimaryLight"
                android:contentDescription="@string/add_button_content_description"
                android:scaleType="fitCenter"
                android:src="@drawable/add" />

            <ImageButton
                android:id="@+id/delete_all_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.7"
                android:background="@color/colorPrimaryLight"
                android:contentDescription="@string/delete_all_button_content_description"
                android:scaleType="fitCenter"
                android:src="@drawable/deleteall" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:alpha="0.7"
            android:background="@color/colorPrimaryLight"
            android:contentDescription="@string/delete_button_content_description"
            android:scaleType="fitCenter"
            android:src="@drawable/delete" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>